--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ferdev</title>
-  <base href="https://fernand117.github.io/ferdevPortafolio">
+  <base href="https://fernand117.github.io/ferdevPortafolio/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.4a5af1e286118573237a.css"></head>
