--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ferdev</title>
+    <title>Páginas web y aplicaciones móviles en Córdoba, Ver | Ferdev</title>
     <base href="https://fernand117.github.io/ferdevPortafolio/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="description" content="Desarrollo de páginas web, aplicaciones web y aplicaciones móviles en Córdoba, Ver. Soy desarrollador de software, actualmente con sede en la ciudad de Fortín de las Flores, Veracruz.">
 <link rel="stylesheet" href="styles.0c88e51b72c34f50a5af.css"></head>
 
 <body>
