--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
     <base href="https://fernand117.github.io/ferdevPortafolio/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Desarrollo de páginas web, aplicaciones web y aplicaciones móviles en Córdoba, Ver. Soy desarrollador de software, actualmente con sede en la ciudad de Fortín de las Flores, Veracruz.">
-    <meta name="google-site-verification" content="O6NiI9Zwz4Ar-FSaAsCdVkPF0ZYnvslX-NIy0tMdPYc" />
-    <link rel="stylesheet" href="styles.0c88e51b72c34f50a5af.css">
-</head>
+    <meta name="google-site-verification" content="O6NiI9Zwz4Ar-FSaAsCdVkPF0ZYnvslX-NIy0tMdPYc"/>
+<link rel="stylesheet" href="styles.0c88e51b72c34f50a5af.css"></head>
 
 <body>
+    <img src="assets/img/ferdev_background_youtube.jpg" alt="" style="display: none;">
     <div class="cont">
         <app-root></app-root>
     </div>
-    <script src="runtime.7b63b9fd40098a2e8207.js" defer></script>
-    <script src="polyfills.00096ed7d93ed26ee6df.js" defer></script>
-    <script src="scripts.b4de8ca130f805fd34ba.js" defer></script>
-    <script src="main.534f1675efad4c53a6fe.js" defer></script>
-</body>
+<script src="runtime.7b63b9fd40098a2e8207.js" defer></script><script src="polyfills.00096ed7d93ed26ee6df.js" defer></script><script src="scripts.b4de8ca130f805fd34ba.js" defer></script><script src="main.534f1675efad4c53a6fe.js" defer></script></body>
 
 </html>
