--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
             <h1>Fernando Leyva</h1>
             <p>Soy <span class="typed" data-typed-items="Diseñador, Desarrollador, Freelancer"></span></p>
             <div class="social-links">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i>< /a>-->
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/Fernand_117" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/fernandoleyvadev/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/luis-fernando-leyva-luna-937a29129/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/Fernand117" class="github"><i class="bx bxl-github"></i></a>
             </div>
         </div>
     </section>
@@ -599,9 +598,10 @@
             <h3>Fernando Leyva</h3>
             <!--<p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>-->
             <div class="social-links">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/Fernand_117" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/fernandoleyvadev/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/luis-fernando-leyva-luna-937a29129/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/Fernand117" class="github"><i class="bx bxl-github"></i></a>
             </div>
             <div class="copyright">
                 &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
