fix(contacto-php):Se modificó el contact del form ahora ya se pueden enviar correos desde el formulario, también se añadió SEO a la página.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>FernandDev</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>Desarrollo de Software y Soporte Técnico en Fortín de las Flores | FernanDev</title>
+    <meta content="Somos una empresa especializada en el desarrollo de software y soporte técnico en Fortín de las Flores. Ofrecemos soluciones tecnológicas personalizadas, incluyendo el desarrollo de aplicaciones web y móviles, páginas web atractivas y funcionales, así como servicios de mantenimiento y consultoría de software. Nuestro equipo altamente capacitado está comprometido en brindar soluciones tecnológicas de calidad, optimizando sitios web y ofreciendo un soporte técnico confiable. ¡Confía en nosotros para impulsar la presencia digital de tu negocio en Fortín de las Flores y obtener resultados destacados!"
+        name="description">
+    <meta content="Desarrollo web en Córdoba,Soporte técnico en Fortín,Servicios de desarrollo en Orizaba,Soporte informático en Veracruz,Desarrollo de software en Córdoba,Servicio técnico de computadoras en Fortín,Desarrollo de aplicaciones móviles en Orizaba,Soporte de redes en Veracruz,Servicios de mantenimiento de equipos en Córdoba,Soluciones tecnológicas en Fortín, Orizaba, Veracruz,Desarrollo de software en Orizaba,Desarrollo de aplicaciones web en Orizaba,Desarrollo de páginas web en Orizaba,Desarrollo de aplicaciones móviles en Orizaba,Soporte técnico en Orizaba,Servicios de software en Orizaba,Desarrollo personalizado en Orizaba,Soluciones tecnológicas en Orizaba,Consultoría de software en Orizaba,Mantenimiento de software en Orizaba,Diseño web en Orizaba,Optimización de sitios web en Orizaba,Programación web en Orizaba,Desarrollo de sistemas en Orizaba,Desarrollo de e-commerce en Orizaba,Desarrollo de software en Córdoba,Desarrollo de aplicaciones web en Córdoba,Desarrollo de páginas web en Córdoba,Desarrollo de aplicaciones móviles en Córdoba,Soporte técnico en Córdoba,Servicios de software en Córdoba,Desarrollo personalizado en Córdoba,Soluciones tecnológicas en Córdoba,Consultoría de software en Córdoba,Mantenimiento de software en Córdoba,Diseño web en Córdoba,Optimización de sitios web en Córdoba,Programación web en Córdoba,Desarrollo de sistemas en Córdoba,Desarrollo de e-commerce en Córdoba,Desarrollo de software en Fortín de las Flores,Desarrollo de aplicaciones web en Fortín de las Flores,Desarrollo de páginas web en Fortín de las Flores,Desarrollo de aplicaciones móviles en Fortín de las Flores,Soporte técnico en Fortín de las Flores,Servicios de software en Fortín de las Flores,Desarrollo personalizado en Fortín de las Flores,Soluciones tecnológicas en Fortín de las Flores,Consultoría de software en Fortín de las Flores,Mantenimiento de software en Fortín de las Flores,Diseño web en Fortín de las Flores,Optimización de sitios web en Fortín de las Flores,Programación web en Fortín de las Flores,Desarrollo de sistemas en Fortín de las Flores,Desarrollo de e-commerce en Fortín de las Flores"
+        name="keywords">
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
@@ -48,6 +50,7 @@
             <ul>
                 <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+                <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
                 <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
                 <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
@@ -176,6 +179,85 @@
             </div>
         </section>
         <!-- End Facts Section -->
+
+        <!-- ======= Services Section ======= -->
+        <section id="services" class="services">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-title">
+                    <h2>Servicios</h2>
+                    <p>Somos una empresa especializada en el desarrollo de software y soporte técnico en Fortín de las Flores. Ofrecemos soluciones tecnológicas personalizadas, incluyendo el desarrollo de aplicaciones web y móviles, páginas web atractivas
+                        y funcionales, así como servicios de mantenimiento y consultoría de software. Nuestro equipo altamente capacitado está comprometido en brindar soluciones tecnológicas de calidad, optimizando sitios web y ofreciendo un soporte técnico
+                        confiable. ¡Confía en nosotros para impulsar la presencia digital de tu negocio en Fortín de las Flores y obtener resultados destacados!</p>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box iconbox-blue">
+                            <div class="icon">
+                                <img src="assets/img/icons/web_design.png" alt="Diseño web profesional y atractivo para destacar en línea.">
+                            </div>
+                            <h4><a href="">Diseño web</a></h4>
+                            <p>Diseño web profesional y atractivo para destacar en línea.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="icon-box iconbox-orange ">
+                            <div class="icon">
+                                <img src="assets/img/icons/web_app.png" alt="Desarrollo de aplicaciones web innovadoras y funcionales.">
+                            </div>
+                            <h4><a href="">Aplicaciones web</a></h4>
+                            <p>Desarrollo de aplicaciones web innovadoras y funcionales.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                        <div class="icon-box iconbox-pink">
+                            <div class="icon">
+                                <img src="assets/img/icons/apps.png" alt="Creación de aplicaciones móviles personalizadas y de alto rendimiento.">
+                            </div>
+                            <h4><a href="">Aplicaciones móviles.</a></h4>
+                            <p>Creación de aplicaciones móviles personalizadas y de alto rendimiento.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="icon-box iconbox-yellow">
+                            <div class="icon">
+                                <img src="assets/img/icons/servers.png" alt="Administración de servidores para un rendimiento óptimo y seguridad en línea.">
+                            </div>
+                            <h4><a href="">Servidores</a></h4>
+                            <p>Administración de servidores para un rendimiento óptimo y seguridad en línea.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="icon-box iconbox-red">
+                            <div class="icon">
+                                <img src="assets/img/icons/backend.png" alt="Desarrollo de backend robusto y escalable para impulsar tus aplicaciones y servicios en línea.">
+                            </div>
+                            <h4><a href="">Backend</a></h4>
+                            <p>Desarrollo de backend robusto y escalable para impulsar tus aplicaciones y servicios en línea.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                        <div class="icon-box iconbox-teal">
+                            <div class="icon">
+                                <img src="assets/img/icons/support.png" alt="Soporte técnico confiable y soluciones eficientes para tus necesidades tecnológicas.">
+                            </div>
+                            <h4><a href="">Soporte técnico</a></h4>
+                            <p>Soporte técnico confiable y soluciones eficientes para tus necesidades tecnológicas.</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- End Services Section -->
 
         <!-- ======= Skills Section ======= -->
         <section id="skills" class="skills section-bg">
@@ -543,7 +625,8 @@
                             <div class="email">
                                 <i class="bi bi-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>fernanddev@hotmail.com<p>
+                                <p>fernanddev@hotmail.com
+                                    <p>
                             </div>
 
                             <div class="phone">
@@ -577,6 +660,11 @@
                                 <div class="loading">Cargando</div>
                                 <div class="error-message"></div>
                                 <div class="sent-message">Su mensaje ha sido enviado. Gracias!</div>
+                            </div>
+                            <div class="my-3">
+                                <div class="loading">Enviando</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Su correo ha sido envíado. Gracias!</div>
                             </div>
                             <div class="text-center"><button type="submit">Enviar mensaje</button></div>
                         </form>
